[gd_scene load_steps=3 format=3 uid="uid://c3ohq6scgf573"]

[ext_resource type="Script" path="res://ui/resources_panel.gd" id="1_a5vsh"]
[ext_resource type="Texture2D" uid="uid://dhd1jp8f0jf0e" path="res://assets/ui_v1.png" id="2_rabu3"]

[node name="BottomPanel" type="PanelContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_right = 1002.0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1_a5vsh")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_rabu3")
region_rect = Rect2(4, 4, 36, 42)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 15
columns = 14

[node name="WoodIcon" type="ColorRect" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2

[node name="WoodCount" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Liczba"

[node name="MetalIcon" type="ColorRect" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2

[node name="MetalCount" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Liczba"

[node name="CoalIcon" type="ColorRect" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2

[node name="CoalCount" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Liczba"

[node name="PsiIcon" type="ColorRect" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2

[node name="PsiCount" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Liczba"

[node name="ColorRect5" type="ColorRect" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2

[node name="GasolineCount" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Liczba"

[node name="ColorRect6" type="ColorRect" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2

[node name="SiliconCount" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Liczba"

[node name="ColorRect7" type="ColorRect" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2

[node name="CreditsCount" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Liczba"
